# ATR

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  GUIDE.md  PROJECT_SUMMARY.md  README.md  STAGE2_GUIDE.md  USER_GUIDE.md  requirements.txt  run_stage2.sh  setup_and_run.sh  setup_and_run_stage2.sh  setup_stage2.sh
bridge/to_mqtt/: 1762742431622_truck_1_commands.json
doc/: Conteudo.md  Figure1.md
doc/code/: LOCK_ORDERING.md  LOGGING_SYSTEM.md  PERFORMANCE_MONITORING.md
doc/project/: ProjectDescription.md
include/: circular_buffer.h  command_logic.h  common_types.h  data_collector.h  fault_monitoring.h  local_interface.h  logger.h  navigation_control.h  performance_monitor.h  route_planning.h  sensor_processing.h  watchdog.h
logs/: truck_1_log.csv
python_gui/: mine_management.py  mine_simulation.py  mqtt_bridge.py
src/: circular_buffer.cpp  command_logic.cpp  data_collector.cpp  fault_monitoring.cpp  local_interface.cpp  logger.cpp  main.cpp  navigation_control.cpp  performance_monitor.cpp  route_planning.cpp  sensor_processing.cpp  watchdog.cpp
